<resources>
    <string name="app_name">Sudoku</string>
    <string name="new_game">New Game</string>
    <string name="scores">Scores</string>
    <string name="how_to_play">How to play</string>
    <string name="toolbar">toolbar</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="sudoku">Sudoku</string>
    <string name="time">Time:</string>
    <string name="game_1">Game 1</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="game_completed">Game Completed</string>
    <string name="statistics">Statistics</string>
    <string name="close">Close</string>
    <string name="share">Share</string>

</resources>
