<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.apps.esampaio.sudoku.view.MainActivity">

    <!--<include layout="@layout/toolbar" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/logo"
            android:transitionName="logo_transition" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/button_horizontal_margin"
        android:paddingRight="@dimen/button_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/bt_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/bt_tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play" />
    </LinearLayout>

</LinearLayout>
