<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.apps.esampaio.sudoku.view.GameCompleteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <TextView
            style="@style/TitleStyle"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_completed"
            android:textColor="@color/logo_color_2" />

        <TextView
            style="@style/SubtitleStyle"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:textColor="@color/logo_color_1" />
    </LinearLayout>

    <TableLayout

        android:id="@+id/statistics_table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <TableRow
            android:id="@+id/statistics_row_level"
            android:visibility="invisible"
            android:layout_marginBottom="20dp">

            <TextView
                style="@style/TableTextStyle"
                android:textStyle="bold"
                android:textColor="@color/logo_color_1"
                android:layout_weight="1"
                android:text="Level" />

            <TextView
                android:id="@+id/statistics_level"
                style="@style/TableTextStyle"
                android:textColor="@color/logo_color_1"
                android:layout_weight="1"
                android:text="--level--" />
        </TableRow>

        <TableRow
            android:id="@+id/statistics_row_difficulity"
            android:visibility="invisible"
            android:layout_marginBottom="20dp" >

            <TextView
                style="@style/TableTextStyle"
                android:textColor="@color/logo_color_2"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="Dificulity" />

            <TextView
                android:id="@+id/statistics_difficulity"
                android:textColor="@color/logo_color_2"
                style="@style/TableTextStyle"
                android:layout_weight="1"
                android:text="--diif--" />
        </TableRow>

        <TableRow
            android:id="@+id/statistics_row_time"
            android:visibility="invisible"
            android:layout_marginBottom="20dp">

            <TextView
                android:textColor="@color/logo_color_3"
                style="@style/TableTextStyle"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="Time" />

            <TextView
                android:id="@+id/statistics_time"
                android:textColor="@color/logo_color_3"
                style="@style/TableTextStyle"
                android:layout_weight="1"
                android:text="--time--" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_margin="@dimen/button_horizontal_margin"
        android:orientation="vertical">

        <Button
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share" />

        <Button
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close" />
    </LinearLayout>
</LinearLayout>
